# onnxruntime-demo-cmake

./: CMakeLists.txt
OnnxRuntimeDemoGPU/: CMakeLists.txt  main.cpp
